--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ a {
 }
 
 .bg-dark {
-  background-color: #0a49469c;
+  background: linear-gradient(rgb(98, 67, 67),rgb(19, 19, 63) 90%);
   color: #fff;
 }
 
