--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ a {
 }
 
 .bg-dark {
-  background: linear-gradient(rgb(98, 67, 67),rgb(19, 19, 63) 90%);
+    background: linear-gradient(rgba(98, 67, 67, 0),rgb(19, 19, 63) 100%);
   color: #fff;
 }
 
